# product-meta-analysis

./: .gitignore  Makefile  README.md  conda.yaml  pyproject.toml  setup.cfg  setup.py  todo.txt
config/reddit_comments/: example.yaml  gluten_free_flour.yaml
config/website_content/: example.yaml
data/: gluten-free-bread.csv
notebooks/: recipe-ingredients-general.ipynb  reddit-bread.ipynb  reddit-comments-general.ipynb
notebooks/website/: recipe-ingredients-general.ipynb  recipe-ingredients-regression.ipynb
pkg/product_meta_analysis/: database.py  utils.py  version.py
pkg/product_meta_analysis/aggregate/: reddit.py
pkg/product_meta_analysis/analyze/: basic_plots.py  brands.py  parse.py  regression.py  tokenize.py
pkg/product_meta_analysis/collect/: content.py  recipe_cards.py  reddit.py  schema.py  sitemap.py  website_content.py
pkg/product_meta_analysis/database/: create.py  database.py
scripts/: create_tables.py  get_content.py  get_reddit_comments.py  get_urls.py  parse_reddit_comments.py  search_reddit_comments.py
scripts/reddit/: create_tables.py  get_reddit_comments.py  parse_reddit_comments.py
scripts/website/: create_tables.py  get_website_content.py  get_website_urls.py  parse_recipe_ingredients.py
tests/: conftest.py  test_utils.py
tests/aggregate/: test_reddit.py
tests/analyze/: test_parse.py  test_regression.py
tests/fixtures/: comments_with_annotations.csv
tests/fixtures/html/: full_WPRM_page.html  ingredients_tasty.html  ingredients_wprm.html  multiple_recipe_div.html
tests/website/: test_recipe_cards.py  test_schema.py
