[metadata]
name = product-meta-analysis
description = Meta analysis of product reviews.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kkeller88/product-meta-analysis

[options]
package_dir =
    = pkg
packages = find:
python_requires = >=3.8

[options.packages.find]
where = pkg
